--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "husky": "^0.14.3",
     "lerna": "^2.2.0",
     "lerna-changelog": "^0.6.0",
+    "lerna-semantic-release": "^9.1.0",
     "license-checker": "^14.0.0",
     "opt-cli": "^1.5.2",
     "prettier": "^1.7.3",
