--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,11 +14,5 @@
       "when": "$(basename)"
     }
   },
-  "typescript.tsdk": "node_modules/typescript/lib",
-  "prettier.trailingComma": "none",
-  "prettier.singleQuote": true,
-  "prettier.printWidth": 120,
-  "prettier.typescriptEnable": ["typescript", "typescriptreact"],
-  "prettier.cssEnable": ["css", "less", "scss"],
-  "prettier.javascriptEnable": ["javascript", "javascriptreact"]
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
