--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
     "danger": "danger run --verbose",
     "license": "license-checker --csv --out docs/licenses.csv",
     "precommit": "lint-staged",
-    "release": "lerna publish"
+    "release": "lerna publish",
+    "lint": "eslint --print-config .eslintrc | eslint-config-prettier-check"
   },
   "devDependencies": {
-    "codelyzer": "^3.2.1",
     "commitizen": "^2.9.6",
     "cz-lerna-changelog": "^1.2.1",
-    "danger": "^2.0.0-alpha.20",
+    "danger": "^2.0.3",
+    "eslint": "^4.12.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "lerna": "^2.2.0",
-    "lerna-changelog": "^0.6.0",
+    "lerna": "^2.5.1",
+    "lerna-changelog": "^0.7.0",
     "lerna-semantic-release": "^9.1.0",
-    "license-checker": "^14.0.0",
-    "lint-staged": "^4.3.0",
-    "opt-cli": "^1.5.2",
-    "prettier": "^1.7.4",
-    "rxjs-tslint-rules": "^3.0.3",
+    "license-checker": "^15.0.0",
+    "lint-staged": "^6.0.0",
+    "opt-cli": "^1.6.0",
+    "prettier": "^1.9.1",
     "validate-commit-msg": "^2.14.0"
   }
 }
